--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
+    "i": "^0.3.6",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
