--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "axios": "^0.21.1",
     "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
     "i": "^0.3.6",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.2"
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.5.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
